[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
version = "22.12.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"

[tool.flakeheaven]
exclude = []
format = "grouped"
max_line_length = 88
show_source = true

[tool.flakeheaven.exceptions."*/__init__.py"]
pyflakes = ["-F401"]

[tool.flakeheaven.exceptions."tests/"]
flake8-docstrings = ["-D1??"]
flake8-darglint = ["-DAR*", "+D0??"]
flake8-bandit = ["-S101"]

[tool.flakeheaven.plugins]
dlint = ["+*"]
flake8-bandit = ["+*"]
flake8-black = ["+*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*", "-D401", "-D412"]
flake8-logging-format = ["+*"]
flake8-pytest-style = ["+*"]
flake8-typing-imports = ["+*", "-TYP001"]
flake8-use-fstring-format = ["+*"]
flake8-use-fstring-percent = ["+*"]
flake8-use-fstring-prefix = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*", "-C0103", "-C0114", "-C0115", "-C0116", "-E0401"]

[tool.isort]
line_length = 88
multi_line_output = 3
balanced_wrapping = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
combine_star = true
include_trailing_comma = true
use_parentheses = true
known_first_party = "cmk"
known_third_party = []
known_logging = "logging"
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER","LOGGING" ]

[tool.poetry]
authors = ["NimVek <NimVek@users.noreply.github.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 3 - Alpha",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "API for CheckMK"
license = "GPL-3.0-or-later"
name = "python-cmk"
readme = "README.md"
repository = "https://github.com/NimVek/python-cmk"
version = "22.12.0"
packages = [
    { include = "cmk", from = "src" }
]

[tool.poetry.dependencies]
incremental = "^22"
python = "^3.8"
requests = "^2.28"
furl = "^2.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
commitizen = "^2.37.0"
darglint = "^1.8.1"
dlint = "^0.13.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-broken-line = "^0.6.0"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.0"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.4.0"
flake8-logging-format = "^0.8.1"
flake8-markdown = "^0.3.0"
flake8-simplify = "^0.19.3"
flake8-tidy-imports = "^4.8.0"
flake8-type-checking = "^2.2.0"
flake8-typing-imports = "^1.12.0"
flake8-use-fstring = "^1.4"
pep8-naming = "^0.13.2"
flakeheaven = "^3.2.0"
ipython = "^8.5.0"
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.7"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-section-index = "^0.3.4"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.8.2"
mypy = "^0.982"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-randomly = "^3.12.0"
pytest-xdist = "^3.0.2"
toml-sort = "^0.20.1"
types-requests = "^2.28.11"
GitPython = "^3.1.29"

[tool.pytest.ini_options]
pythonpath = [ "src" ]
testpaths = [ "tests" ]
markers = [ "docker" ]
log_cli = true
log_cli_level = "DEBUG"
