[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
version = "23.4.0"
version_files = [
  "pyproject.toml:version"
]
tag_format = "v$version"

[tool.flakeheaven]
format = "grouped"
max_line_length = 88
show_source = true

[tool.flakeheaven.exceptions."*/__init__.py"]
pyflakes = ["-F401"]

[tool.flakeheaven.plugins]
"*" = ["+*"]
flake8-bugbear = ["+*", "-B019"]
pycodestyle = ["+*", "-E203", "-E501", "-W503"]

[tool.isort]
line_length = 88
multi_line_output = 3
balanced_wrapping = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
combine_star = true
include_trailing_comma = true
use_parentheses = true
known_first_party = "cmk"
known_third_party = []
known_logging = "logging"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "LOGGING"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
warn_unused_configs = true

[tool.poetry]
authors = ["NimVek <NimVek@users.noreply.github.com>"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Development Status :: 3 - Alpha",
  "Topic :: System :: Monitoring",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
description = "API for CheckMK"
license = "GPL-3.0-or-later"
name = "python-cmk"
readme = "README.md"
repository = "https://github.com/NimVek/python-cmk"
version = "23.4.0"
packages = [
  {include = "cmk", from = "src"}
]

[tool.poetry.dependencies]
incremental = "^22"
python = "^3.8"
requests = "^2.28"
furl = "^2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
commitizen = "^2.42.1"
flakeheaven = "^3.2.1"
flake8-broken-line = "^0.6.0"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.11.0"
flake8-eradicate = "^1.4.0"
flake8-logging-format = "^0.9.0"
flake8-simplify = "^0.19.3"
flake8-tidy-imports = "^4.8.0"
flake8-type-checking = "^2.3.1"
flake8-use-fstring = "^1.4"
ipython = "^8.11.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mypy = "^1.1.1"
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pytest-annotate = "^1.0.5"
pytest-cov = "^4.0.0"
pytest-randomly = "^3.12.0"
pytest-xdist = "^3.2.1"
toml-sort = "^0.22.4"
types-requests = "^2.28.11.15"
GitPython = "^3.1.31"
ruff = "^0.0.257"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["docker"]
log_cli = true
log_cli_level = "DEBUG"
